<resources>
    <string name="app_name">Tauch Trainer</string>
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="nav_header_title">Tauch Trainer</string>
    <string name="nav_header_subtitle">support@tauchtrainer.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Einstellungen</string>

    <!-- Menüeinträge -->
    <string name="menu_home">Startseite</string>
    <string name="menu_pool_exercises">Hallenbad-Übungen</string>
    <string name="menu_open_water_exercises">Freiwasser-Übungen</string>
    <string name="menu_settings">Einstellungen</string>

    <!-- Placeholder -->
    <string name="hello_blank_fragment">Willkommen im Tauch Trainer</string>

    <!-- Navigation Labels -->
    <string name="nav_pool_exercises">Hallenbad-Übungen</string>
    <string name="nav_open_water_exercises">Freiwasser-Übungen</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="button_add_exercise">Übung hinzufügen</string>
</resources>
