<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pool"
            android:title="@string/menu_pool_exercises"
            android:icon="@drawable/ic_pool" />
        <item
            android:id="@+id/nav_openwater"
            android:title="@string/menu_open_water_exercises"
            android:icon="@drawable/ic_open_water" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings" />
    </group>
</menu>